--- a/templates/contact_es.html
+++ b/templates/contact_es.html
@@ -107,31 +107,41 @@
             <h3>Si tiene alguna pregunta, contáctenos a continuación.</h3>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/khj.png') }}"
+            />
             <p style="font-size: x-large"><strong>Hanju Kim</strong></p>
             <p>&ltE-mail&gt<br />hanjukim0922@gmail.com</p>
             <p>&ltKakaoTalk&gt<br />hj0922</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/kmj.png') }}"
+            />
             <p style="font-size: x-large"><strong>Minji Kim </strong></p>
             <p>&ltE-mail&gt<br />vp9397@naver.com</p>
             <p>&ltKakaoTalk&gt<br />woodbvo12</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/syj.png') }}"
+            />
             <p style="font-size: x-large"><strong>Yeonjae Sung </strong></p>
             <p>&ltE-mail&gt<br />siriyay@naver.com</p>
             <p>&ltKakaoTalk&gt<br />proofreadd</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/sjh.png') }}"
+            />
             <p style="font-size: x-large"><strong>Jongho Song </strong></p>
             <p>&ltE-mail&gt<br />sjh7397@naver.com</p>
             <p>&ltKakaoTalk&gt<br />Lilac3</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/jyh.png') }}"
+            />
             <p style="font-size: x-large"><strong>YeongHoon Jeong </strong></p>
             <p>&ltE-mail&gt<br />gi93008@naver.com</p>
             <p>&ltKakaoTalk&gt<br />gannak8</p>
