--- a/templates/result_ja.html
+++ b/templates/result_ja.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -107,17 +107,23 @@
     <div class="list">
       <div class="three">
         <div style="text-align: center" id="div_show">
-          <h1 style="text-align: center">LimnPet</h1>
+          <h1 style="text-align: center">LimnPet サービス</h1>
           <h3 style="text-align: center">
-            Draw your pet in the style of your choice
+            お好みのスタイルでペットを描く
           </h3>
+          <p style="padding-top:1rem;text-align: center">
+            結果を保存する<br>
+            解像度を向上させるためにサービスページに戻る<br>
+            また<br>
+            グッズページに移動してグッズショップを選択
+          </p>
         </div>
 
         <div class="file-upload">
           <div id="result_show">
             <img
               src="{{url_for('static', filename = img_file)}}"
-              style="width: 10rem"
+              style="width: 20rem"
               alt="Error"
             />
           </div>
@@ -136,17 +142,28 @@
               type="button"
               onClick="location.href='/service_ja'"
             >
-              <span class="image-title">やり直す</span>
+              <span class="image-title">再試行する</span>
             </button>
           </div>
 
+          <div id="goods_button">
+            <button
+              class="remove-image"
+              style="font-size:medium"
+              type="button"
+              onClick="location.href='/goods_ja'"
+            >
+              <span class="image-title">グッズショップリストに移動</span>
+            </button>
+          </div>
+          
           <div id="home_button">
             <button
               class="remove-image"
               type="button"
               onClick="location.href='/home_ja'"
             >
-              <span class="image-title">ホームに戻る</span>
+              <span class="image-title">帰国</span>
             </button>
           </div>
 
