--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,16 +2,12 @@ body {
   font-family: "Gowun Dodum", sans-serif;
 }
 
-/* 상단바 */
-/* .menu * { display: inline; } */
-
 .menu .navbar-dark {
   font-family: "Gowun Dodum", sans-serif;
-  opacity: 0.7;
-  background-color: #000000;
+  background: rgba(0, 0, 0, 0.7);
   font-size: 1.5rem;
-  font-style: italic Bold;
-  align-items: center; /* text-align: center; */
+  /* font-style: italic Bold; */
+  /* align-items: center; text-align: center; */
   position: fixed;
   top: 0;
   left: 0;
@@ -22,9 +18,9 @@ body {
 }
 
 .navbar-dark .navbar-toggler {
-  border-color: #000000;
+  border-color: rgba(0, 0, 0, 0);
 }
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 992px) {
   .menu ul {
     float: none;
     position: absolute;
@@ -41,13 +37,32 @@ body {
   html {
     font-size: 10px;
   }
-  /* .menu ul {
-		float: none;
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0; */
+  .menu .navbar-dark {
+    font-size: 2.1rem;
+    height: 5rem;
+  }
+  .navbar-toggler {
+    font-size: 2rem;
+  }
+}
+.nav-link {
+  padding: 0rem 0rem;
+}
+.dropdown-menu {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  position: absolute;
+  z-index: 1000;
+  display: none;
+  min-width: 10rem;
+  padding: 0.5rem;
+  margin: 0;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border: 0px;
 }
 
 /* Banner 1 */
@@ -70,7 +85,7 @@ body {
 
 .futureplans {
   display: inline-block;
-  font-size: 24px;
+  font-size: 1.2rem;
   color: rgb(255, 255, 255);
   line-height: 1.2;
   font-family: "Roboto", sans-serif;
@@ -97,9 +112,6 @@ body {
   width: 70vh;
   height: 60vh;
   padding-top: 39px;
-  /* position: relative;
-  left: -400px;
-  top: 40px; */
 }
 
 @media screen and (max-width: 719px) {
@@ -133,30 +145,6 @@ body {
   transition: all 0.2s ease;
 }
 
-/* .service_button {
-  width: 24rem;
-  color: rgb(255, 255, 255);
-  background: #f2b705;
-  border: none;
-  padding: 0.6rem;
-  border-radius: 30px;
-  transition: all 0.2s ease;
-  outline: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 20px;
-}
-.service_button:hover {
-  background: #f28b05;
-  color: #fff;
-  transition: all 0.2s ease;
-  cursor: pointer;
-}
-.service_button:active {
-  border: 0;
-  transition: all 0.2s ease;
-} */
-
 /* Contact 4 */
 .four {
   text-align: center;
@@ -171,11 +159,6 @@ body {
   line-height: 1.5;
   display: inline-block;
 }
-.list_img {
-  width: 300px;
-  height: 300px;
-  margin: 5vh 2vh;
-}
 
 /* Goods 5 */
 
@@ -185,11 +168,7 @@ body {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
-.contact_img {
-  margin: auto;
-  width: 70rem;
-  padding-bottom: 1rem;
-}
+
 .ct {
   text-decoration: none;
   color: white;
@@ -208,14 +187,15 @@ body {
 .footer-info {
   flex-direction: column;
   align-items: center;
+  padding-bottom: 0.5rem;
 }
 
 .footer-info__text {
   gap: 12px;
   color: rgb(255, 255, 255);
-  font-size: 16px;
+  font-size: 1rem;
   align-items: center;
-  margin-bottom: 14px;
+  /* margin-bottom: 14px; */
 }
 
 .footer-info__text span em {
