--- a/templates/contact_ko.html
+++ b/templates/contact_ko.html
@@ -103,35 +103,44 @@
       <div class="contact_list">
         <div class="four">
           <div style="padding-top: 3rem">
-            <h1><strong>Contact</strong></h1>
-            <h3>If you have any questions, please contact us below</h3>
+            <h3>궁금한 사항이 있으시면 아래로 연락주세요</h3>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/khj.png') }}"
+            />
             <p style="font-size: x-large"><strong>김한주</strong></p>
             <p>&ltE-mail&gt<br />hanjukim0922@gmail.com</p>
             <p>&lt카카오톡&gt<br />hj0922</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/kmj.png') }}"
+            />
             <p style="font-size: x-large"><strong>김민지</strong></p>
             <p>&ltE-mail&gt<br />vp9397@naver.com</p>
             <p>&lt카카오톡&gt<br />woodbvo12</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/syj.png') }}"
+            />
             <p style="font-size: x-large"><strong>성연재</strong></p>
             <p>&ltE-mail&gt<br />siriyay@naver.com</p>
             <p>&lt카카오톡&gt<br />proofreadd</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/sjh.png') }}"
+            />
             <p style="font-size: x-large"><strong>송종호</strong></p>
             <p>&ltE-mail&gt<br />sjh7397@naver.com</p>
             <p>&lt카카오톡&gt<br />Lilac3</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/jyh.png') }}"
+            />
             <p style="font-size: x-large"><strong>정영훈</strong></p>
             <p>&ltE-mail&gt<br />gi93008@naver.com</p>
             <p>&lt카카오톡&gt<br />gannak8</p>
