--- a/templates/goods.html
+++ b/templates/goods.html
@@ -8,6 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goods</title>
     <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -21,6 +31,9 @@
       rel="stylesheet"
       href="{{ url_for('static', filename = 'css/goods.css') }}"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
+    </style>
   </head>
 
   <body>
@@ -88,13 +101,26 @@
       </nav>
     </div>
 
-    <div id="container" role="main">
+    <div
+      id="container"
+      role="main"
+      style="background: linear-gradient(to right, #f2994a, #f2c94c)"
+    >
       <div
         style="display: flex; justify-content: center; align-content: center"
       >
-        <div class="five">
+        <div class="four" style="padding-top: 11rem;padding-bottom:11rem">
+          <h1
+            style="
+              text-align: center;
+              font-size: 48px;
+              font-weight: 600;
+              color: aliceblue;
+            "
+          >
+            Goods Shop 🎁
+          </h1>
           <div style="padding-top: 2rem; padding-bottom: 2rem">
-            <p style="font-weight: 900; font-size: 32px">Goods Shops</p>
             <h4>
               <p style="color: white">
                 Make your customized pet goods with converted picture via
@@ -117,7 +143,11 @@
                 "
                 class="img"
               >
-                <a href="https://www.bizhows.com/" class="ac1">
+                <a
+                  href="https://www.bizhows.com/v/category?mock=product_list_007&categoryName=%ED%8B%B0%EC%85%94%EC%B8%A0"
+                  class="ac1"
+                  target="blank"
+                >
                   <div class="imc1"></div>
                   <div
                     style="
@@ -128,7 +158,11 @@
                     Bizhows
                   </div>
                 </a>
-                <a href="https://www.publog.co.kr/Default.asp" class="ac2">
+                <a
+                  href="https://www.publog.co.kr/apparel/"
+                  class="ac2"
+                  target="blank"
+                >
                   <div class="imc2"></div>
                   <div
                     style="
@@ -139,7 +173,7 @@
                     Publog
                   </div>
                 </a>
-                <a href="https://www.tpana.com/" class="ac3">
+                <a href="https://www.tpana.com/" class="ac3" target="blank">
                   <div class="imc3"></div>
                   <div
                     style="
@@ -150,7 +184,11 @@
                     Tpana
                   </div>
                 </a>
-                <a href="https://www.customzone.co.kr/" class="ac4">
+                <a
+                  href="https://www.customzone.co.kr/"
+                  class="ac4"
+                  target="blank"
+                >
                   <div class="imc4"></div>
                   <div
                     style="
@@ -173,7 +211,11 @@
                 "
                 class="img"
               >
-                <a href="http://www.bandya.com/" class="ac1">
+                <a
+                  href="http://www.bandya.com/product/list.html?cate_no=152"
+                  class="ac1"
+                  target="blank"
+                >
                   <div class="imc1"></div>
                   <div
                     style="
@@ -184,7 +226,11 @@
                     Bandya
                   </div>
                 </a>
-                <a href="https://www.marpple.com/kr/" class="ac2">
+                <a
+                  href="https://www.marpple.com/kr/cases"
+                  class="ac2"
+                  target="blank"
+                >
                   <div class="imc2"></div>
                   <div
                     style="
@@ -195,7 +241,11 @@
                     MARPPLE
                   </div>
                 </a>
-                <a href="https://www.phoneppu.com/" class="ac3">
+                <a
+                  href="https://www.phoneppu.com/product/custom_list.html?cate_no=3275"
+                  class="ac3"
+                  target="blank"
+                >
                   <div class="imc3"></div>
                   <div
                     style="
@@ -206,7 +256,7 @@
                     Phoneppu
                   </div>
                 </a>
-                <a href="https://shapely.co.kr/" class="ac4">
+                <a href="https://shapely.co.kr/" class="ac4" target="blank">
                   <div class="imc4"></div>
                   <div
                     style="
@@ -229,7 +279,7 @@
                 "
                 class="img"
               >
-                <a href="http://www.handmc.com/" class="ac1">
+                <a href="http://www.handmc.com/" class="ac1" target="blank">
                   <div class="imc1"></div>
                   <div
                     style="
@@ -240,7 +290,7 @@
                     Handmadec
                   </div>
                 </a>
-                <a href="http://www.jjomool.com/" class="ac2">
+                <a href="http://www.jjomool.com/" class="ac2" target="blank">
                   <div class="imc2"></div>
                   <div
                     style="
@@ -251,7 +301,11 @@
                     Jjomoolshop
                   </div>
                 </a>
-                <a href="https://www.ruashop.co.kr/" class="ac3">
+                <a
+                  href="https://www.tobuymall.com/goods/goods_list.php?cateCd=025002"
+                  class="ac3"
+                  target="blank"
+                >
                   <div class="imc3"></div>
                   <div
                     style="
@@ -259,12 +313,13 @@
                     "
                     class="dis3"
                   >
-                    Ruashop
+                    TBL
                   </div>
                 </a>
                 <a
-                  href="http://www.thankshop.co.kr/shopuser/index.html/"
+                  href="http://www.thankshop.co.kr/shopuser/goods/productList.html?largeno=92&kind=normal"
                   class="ac4"
+                  target="blank"
                 >
                   <div class="imc4"></div>
                   <div
@@ -278,7 +333,7 @@
                 </a>
               </div>
             </div>
-            <p class="tes">Bottle & Cup</p>
+            <p class="tes">Household goods</p>
           </div>
           <div class="lists">
             <div class="list4">
@@ -288,7 +343,7 @@
                 "
                 class="img"
               >
-                <a href="https://www.smilecat.com/" class="ac1">
+                <a href="https://www.smilecat.com/" class="ac1" target="blank">
                   <div class="imc1"></div>
                   <div
                     style="
@@ -299,7 +354,7 @@
                     Smilecat
                   </div>
                 </a>
-                <a href="http://www.adsland.com/" class="ac2">
+                <a href="http://www.adsland.com/" class="ac2" target="blank">
                   <div class="imc2"></div>
                   <div
                     style="
@@ -310,7 +365,11 @@
                     Adsland
                   </div>
                 </a>
-                <a href="http://www.t-free.co.kr/" class="ac3">
+                <a
+                  href="https://www.snaps.com/store/calendar/overview?g_media=google&g_keyword=%EB%8B%AC%EB%A0%A5%EC%A3%BC%EB%AC%B8%EC%A0%9C%EC%9E%91&gclid=Cj0KCQjw37iTBhCWARIsACBt1IzYqwP6nrQ9phP3ijLab9ZUS_XVVxpXajcShzw3rKgPN3-i7cy8jSwaAkElEALw_wcB"
+                  class="ac3"
+                  target="blank"
+                >
                   <div class="imc3"></div>
                   <div
                     style="
@@ -318,10 +377,14 @@
                     "
                     class="dis3"
                   >
-                    The Fancy & Stiker
+                    Snaps
                   </div>
                 </a>
-                <a href="http://www.huniprinting.com/" class="ac4">
+                <a
+                  href="http://www.huniprinting.com/"
+                  class="ac4"
+                  target="blank"
+                >
                   <div class="imc4"></div>
                   <div
                     style="
@@ -334,7 +397,7 @@
                 </a>
               </div>
             </div>
-            <p class="tes">Bookbinding</p>
+            <p class="tes">Others</p>
           </div>
         </div>
       </div>
