--- a/templates/goods_ko.html
+++ b/templates/goods_ko.html
@@ -18,6 +18,16 @@
       type="image/x-icon"
     />
     <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -31,6 +41,9 @@
       rel="stylesheet"
       href="{{ url_for('static', filename = 'css/goods.css') }}"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
+    </style>
   </head>
 
   <body>
@@ -100,67 +113,79 @@
 
     <div id="container" role="main">
       <div
-        style="display: flex; justify-content: center; align-content: center"
+        style="
+          display: flex;
+          justify-content: center;
+          align-content: center;
+          background: linear-gradient(to right, #f2994a, #f2c94c);
+        "
       >
-        <div class="five">
-          <div style="padding-top: 2rem; padding-bottom: 2rem">
-            <p style="font-weight: 900; font-size: 32px">Goods Shops</p>
-            <h4>
-              <p style="color: white">
-                림펫으로 변환한 사진으로 당신만의 제품을 만들어 보세요!
-              </p>
-              <p style="color: white">
-                아래의 그림을 클릭하면 추천 사이트로 이동합니다.
-              </p>
-            </h4>
-          </div>
+      <div class="four" style="padding-top: 15rem">
+        <h1
+          style="
+            text-align: center;
+            font-size: 48px;
+            font-weight: 600;
+            color: aliceblue;
+          "
+        >
+          굿즈 제작 사이트 🎁
+        </h1>
+        <div style="padding-top: 2rem; padding-bottom: 2rem">
+          <h4>
+            <p style="color: white">
+              변환된 사진으로 나만의 펫 상품을 만들어보세요!
+            </p>
+            <p style="color: white">
+              새롭게 디자인된 이미지로 굿즈을 만들기 원하시면 아래 그림을 클릭하세요
+            </p>
+            <p style="color: red">
+              현재 굿즈 회사의 서비스는 한국에서만 가능합니다
+            </p>
+          </h4>
+        </div>
           <div class="lists">
             <div class="list1">
-              <div
-                style="
-                  background-image: url('../../static/img/cloth_modified.jpg');
-                "
-                class="img"
-              >
-                <a href="https://www.bizhows.com/" class="ac1">
-                  <div class="imc1"></div>
+              <div style='background-image:url("../../static/img/cloth_modified.jpg")' class="img">
+                <a href="https://www.bizhows.com/v/category?mock=product_list_007&categoryName=%ED%8B%B0%EC%85%94%EC%B8%A0" class="ac1" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/cloth_origin.jpg');
-                    "
+                    class="imc1"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis1"
                   >
                     비즈하우스
                   </div>
                 </a>
-                <a href="https://www.publog.co.kr/Default.asp" class="ac2">
-                  <div class="imc2"></div>
+                <a href="https://www.publog.co.kr/apparel/" class="ac2" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/cloth_origin.jpg');
-                    "
+                    class="imc2"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis2"
                   >
                     퍼블로그
                   </div>
                 </a>
-                <a href="https://www.tpana.com/" class="ac3">
-                  <div class="imc3"></div>
+                <a href="https://www.tpana.com/" class="ac3" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/cloth_origin.jpg');
-                    "
+                    class="imc3"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis3"
                   >
                     티파나
                   </div>
                 </a>
-                <a href="https://www.customzone.co.kr/" class="ac4">
-                  <div class="imc4"></div>
+                <a href="https://www.customzone.co.kr/" class="ac4" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/cloth_origin.jpg');
-                    "
+                    class="imc4"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis4"
                   >
                     커스텀존
@@ -173,53 +198,50 @@
           <div class="lists">
             <div class="list2">
               <div
-                style="
-                  background-image: url('../../static/img/griptok_modified.jpg');
-                "
-                class="img"
-              >
-                <a href="http://www.bandya.com/" class="ac1">
-                  <div class="imc1"></div>
+              style="background-image: url('../../static/img/griptok_modified.jpg')"
+              class="img">
+                <a href="http://www.bandya.com/product/list.html?cate_no=152" class="ac1" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/griptok_origin.jpg');
-                    "
+                    class="imc1"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis1"
                   >
                     반디야
                   </div>
                 </a>
-                <a href="https://www.marpple.com/kr/" class="ac2">
-                  <div class="imc2"></div>
+                <a href="https://www.marpple.com/kr/cases" class="ac2" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/griptok_origin.jpg');
-                    "
+                    class="imc2"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis2"
                   >
                     마플
                   </div>
                 </a>
-                <a href="https://www.phoneppu.com/" class="ac3">
-                  <div class="imc3"></div>
+                <a href="https://www.phoneppu.com/product/custom_list.html?cate_no=3275" class="ac3" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/griptok_origin.jpg');
-                    "
+                    class="imc3"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis3"
                   >
                     폰뿌
                   </div>
                 </a>
-                <a href="https://shapely.co.kr/" class="ac4">
-                  <div class="imc4"></div>
+                <a href="https://shapely.co.kr/" class="ac4" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/griptok_origin.jpg');
-                    "
+                    class="imc4"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis4"
                   >
-                    셰어플리
+                    셰이플리
                   </div>
                 </a>
               </div>
@@ -229,53 +251,50 @@
           <div class="lists">
             <div class="list3">
               <div
-                style="
-                  background-image: url('../../static/img/cup_modified.jpg');
-                "
-                class="img"
-              >
-                <a href="http://www.handmc.com/" class="ac1">
-                  <div class="imc1"></div>
+              style="background-image: url('../../static/img/cup_modified.jpg')"
+              class="img">
+                <a href="http://www.handmc.com/" class="ac1" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/cup_origin.jpg');
-                    "
+                    class="imc1"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis1"
                   >
                     핸드메이드씨
                   </div>
                 </a>
-                <a href="http://www.jjomool.com/" class="ac2">
-                  <div class="imc2"></div>
+                <a href="http://www.jjomool.com/" class="ac2" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/cup_origin.jpg');
-                    "
+                    class="imc2"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis2"
                   >
                     쪼물샵
                   </div>
                 </a>
-                <a href="https://www.ruashop.co.kr/" class="ac3">
-                  <div class="imc3"></div>
+                <a href="https://www.tobuymall.com/goods/goods_list.php?cateCd=025002" class="ac3" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/cup_origin.jpg');
-                    "
+                    class="imc3"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis3"
                   >
-                    루아샵
+                    TBL
                   </div>
                 </a>
                 <a
-                  href="http://www.thankshop.co.kr/shopuser/index.html/"
-                  class="ac4"
+                  href="http://www.thankshop.co.kr/shopuser/goods/productList.html?largeno=92&kind=normal"
+                  class="ac4" target="blank"
                 >
-                  <div class="imc4"></div>
                   <div
-                    style="
-                      background-image: url('../../static/img/cup_origin.jpg');
-                    "
+                    class="imc4"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis4"
                   >
                     떙스샵
@@ -283,55 +302,52 @@
                 </a>
               </div>
             </div>
-            <p class="tes">생활기구</p>
+            <p class="tes">생활용품</p>
           </div>
           <div class="lists">
             <div class="list4">
               <div
-                style="
-                  background-image: url('../../static/img/sticker_modified.jpg');
-                "
-                class="img"
-              >
-                <a href="https://www.smilecat.com/" class="ac1">
-                  <div class="imc1"></div>
+              style="background-image: url('../../static/img/sticker_modified.jpg')"
+              class="img">
+                <a href="https://www.smilecat.com/" class="ac1" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/sticker_origin.jpg');
-                    "
+                    class="imc1"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis1"
                   >
                     스마일캣
                   </div>
                 </a>
-                <a href="http://www.adsland.com/" class="ac2">
-                  <div class="imc2"></div>
+                <a href="http://www.adsland.com/" class="ac2" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/sticker_origin.jpg');
-                    "
+                    class="imc2"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis2"
                   >
                     애드스랜드
                   </div>
                 </a>
-                <a href="http://www.t-free.co.kr/" class="ac3">
-                  <div class="imc3"></div>
+                <a href="https://www.snaps.com/store/calendar/overview?g_media=google&g_keyword=%EB%8B%AC%EB%A0%A5%EC%A3%BC%EB%AC%B8%EC%A0%9C%EC%9E%91&gclid=Cj0KCQjw37iTBhCWARIsACBt1IzYqwP6nrQ9phP3ijLab9ZUS_XVVxpXajcShzw3rKgPN3-i7cy8jSwaAkElEALw_wcB" class="ac3" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/sticker_origin.jpg');
-                    "
+                    class="imc3"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis3"
                   >
-                    더팬스
+                    Snaps
                   </div>
                 </a>
-                <a href="http://www.huniprinting.com/" class="ac4">
-                  <div class="imc4"></div>
+                <a href="http://www.huniprinting.com/" class="ac4" target="blank">
                   <div
-                    style="
-                      background-image: url('../../static/img/sticker_origin.jpg');
-                    "
+                    class="imc4"
+                  ></div>
+                  <div
+                    style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis4"
                   >
                     후니프린팅
@@ -339,7 +355,7 @@
                 </a>
               </div>
             </div>
-            <p class="tes">그 외</p>
+            <p class="tes">그 외 기타</p>
           </div>
         </div>
       </div>
