--- a/templates/index.html
+++ b/templates/index.html
@@ -48,10 +48,14 @@
     />
     <link
       rel="stylesheet"
+      href="{{ url_for('static', filename = 'css/goods.css') }}"
+    />
+    <link
+      rel="stylesheet"
       href="{{ url_for('static', filename = 'css/contact.css') }}"
     />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Roboto&family=Oswald:wght@300;400&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
     </style>
   </head>
 
@@ -168,11 +172,6 @@
               <div class="content-carrousel">
                 <figure class="shadow">
                   <img
-                    src="{{ url_for('static', filename = 'img/slideshow/disney.jpg') }}"
-                  />
-                </figure>
-                <figure class="shadow">
-                  <img
                     src="{{ url_for('static', filename = 'img/slideshow/hayao.jpg') }}"
                   />
                 </figure>
@@ -217,10 +216,9 @@
             class="intext"
             style="
               font-size: 28px;
-              font-weight: 300;
+              font-weight: 400;
               line-height: 3;
-              color: rgba(0, 0, 0, 0.733);
-              font-family: 'Oswald', sans-serif;
+              color: rgba(255, 255, 255, 0.733);
             "
           >
             You no longer have to pay for the styling of your pet photos.<br />
@@ -332,37 +330,284 @@
           >
             Goods Shops 🎁
           </h1>
-          <div class="lists" style="padding-top: 5rem">
-            <img
-              class="list_img"
-              src="{{ url_for('static', filename = 'img/goods_clothes.jpg') }}"
-              alt=""
-            />
-            <p>Clothing</p>
+          <div style="padding-top: 2rem; padding-bottom: 2rem">
+            <h4>
+              <p style="color: white">
+                Make your customized pet goods with converted picture via
+                Limnpet!
+              </p>
+              <p style="color: white">
+                If you want to use the newly stylized image as a product, please
+                click the picture below.
+              </p>
+              <p style="color: red">
+                Goods websites are only available in Korea for now.
+              </p>
+            </h4>
           </div>
           <div class="lists">
-            <img
-              class="list_img"
-              src="{{ url_for('static', filename = 'img/goods_griptok.jpg') }}"
-              alt=""
-            />
-            <p>Accessories</p>
+            <div class="list1">
+              <div
+                style="
+                  background-image: url('../../static/img/cloth_modified.jpg');
+                "
+                class="img"
+              >
+                <a
+                  href="https://www.bizhows.com/v/category?mock=product_list_007&categoryName=%ED%8B%B0%EC%85%94%EC%B8%A0"
+                  class="ac1"
+                  target="blank"
+                >
+                  <div class="imc1"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/cloth_origin.jpg');
+                    "
+                    class="dis1"
+                  >
+                    Bizhows
+                  </div>
+                </a>
+                <a
+                  href="https://www.publog.co.kr/apparel/"
+                  class="ac2"
+                  target="blank"
+                >
+                  <div class="imc2"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/cloth_origin.jpg');
+                    "
+                    class="dis2"
+                  >
+                    Publog
+                  </div>
+                </a>
+                <a href="https://www.tpana.com/" class="ac3" target="blank">
+                  <div class="imc3"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/cloth_origin.jpg');
+                    "
+                    class="dis3"
+                  >
+                    Tpana
+                  </div>
+                </a>
+                <a
+                  href="https://www.customzone.co.kr/"
+                  class="ac4"
+                  target="blank"
+                >
+                  <div class="imc4"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/cloth_origin.jpg');
+                    "
+                    class="dis4"
+                  >
+                    Customzone
+                  </div>
+                </a>
+              </div>
+            </div>
+            <p class="tes">Clothing</p>
           </div>
           <div class="lists">
-            <img
-              class="list_img"
-              src="{{ url_for('static', filename = 'img/goods_cup.jpg') }}"
-              alt=""
-            />
-            <p>Household Goods</p>
+            <div class="list2">
+              <div
+                style="
+                  background-image: url('../../static/img/griptok_modified.jpg');
+                "
+                class="img"
+              >
+                <a
+                  href="http://www.bandya.com/product/list.html?cate_no=152"
+                  class="ac1"
+                  target="blank"
+                >
+                  <div class="imc1"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/griptok_origin.jpg');
+                    "
+                    class="dis1"
+                  >
+                    Bandya
+                  </div>
+                </a>
+                <a
+                  href="https://www.marpple.com/kr/cases"
+                  class="ac2"
+                  target="blank"
+                >
+                  <div class="imc2"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/griptok_origin.jpg');
+                    "
+                    class="dis2"
+                  >
+                    MARPPLE
+                  </div>
+                </a>
+                <a
+                  href="https://www.phoneppu.com/product/custom_list.html?cate_no=3275"
+                  class="ac3"
+                  target="blank"
+                >
+                  <div class="imc3"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/griptok_origin.jpg');
+                    "
+                    class="dis3"
+                  >
+                    Phoneppu
+                  </div>
+                </a>
+                <a href="https://shapely.co.kr/" class="ac4" target="blank">
+                  <div class="imc4"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/griptok_origin.jpg');
+                    "
+                    class="dis4"
+                  >
+                    Shapely
+                  </div>
+                </a>
+              </div>
+            </div>
+            <p class="tes">Phone-Accessory</p>
           </div>
           <div class="lists">
-            <img
-              class="list_img"
-              src="{{ url_for('static', filename = 'img/goods_sticker.jpg') }}"
-              alt=""
-            />
-            <p>Others</p>
+            <div class="list3">
+              <div
+                style="
+                  background-image: url('../../static/img/cup_modified.jpg');
+                "
+                class="img"
+              >
+                <a href="http://www.handmc.com/" class="ac1" target="blank">
+                  <div class="imc1"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/cup_origin.jpg');
+                    "
+                    class="dis1"
+                  >
+                    Handmadec
+                  </div>
+                </a>
+                <a href="http://www.jjomool.com/" class="ac2" target="blank">
+                  <div class="imc2"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/cup_origin.jpg');
+                    "
+                    class="dis2"
+                  >
+                    Jjomoolshop
+                  </div>
+                </a>
+                <a
+                  href="https://www.tobuymall.com/goods/goods_list.php?cateCd=025002"
+                  class="ac3"
+                  target="blank"
+                >
+                  <div class="imc3"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/cup_origin.jpg');
+                    "
+                    class="dis3"
+                  >
+                    TBL
+                  </div>
+                </a>
+                <a
+                  href="http://www.thankshop.co.kr/shopuser/goods/productList.html?largeno=92&kind=normal"
+                  class="ac4"
+                  target="blank"
+                >
+                  <div class="imc4"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/cup_origin.jpg');
+                    "
+                    class="dis4"
+                  >
+                    Thankshop
+                  </div>
+                </a>
+              </div>
+            </div>
+            <p class="tes">Household goods</p>
+          </div>
+          <div class="lists">
+            <div class="list4">
+              <div
+                style="
+                  background-image: url('../../static/img/sticker_modified.jpg');
+                "
+                class="img"
+              >
+                <a href="https://www.smilecat.com/" class="ac1" target="blank">
+                  <div class="imc1"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/sticker_origin.jpg');
+                    "
+                    class="dis1"
+                  >
+                    Smilecat
+                  </div>
+                </a>
+                <a href="http://www.adsland.com/" class="ac2" target="blank">
+                  <div class="imc2"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/sticker_origin.jpg');
+                    "
+                    class="dis2"
+                  >
+                    Adsland
+                  </div>
+                </a>
+                <a
+                  href="https://www.snaps.com/store/calendar/overview?g_media=google&g_keyword=%EB%8B%AC%EB%A0%A5%EC%A3%BC%EB%AC%B8%EC%A0%9C%EC%9E%91&gclid=Cj0KCQjw37iTBhCWARIsACBt1IzYqwP6nrQ9phP3ijLab9ZUS_XVVxpXajcShzw3rKgPN3-i7cy8jSwaAkElEALw_wcB"
+                  class="ac3"
+                  target="blank"
+                >
+                  <div class="imc3"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/sticker_origin.jpg');
+                    "
+                    class="dis3"
+                  >
+                    Snaps
+                  </div>
+                </a>
+                <a
+                  href="http://www.huniprinting.com/"
+                  class="ac4"
+                  target="blank"
+                >
+                  <div class="imc4"></div>
+                  <div
+                    style="
+                      background-image: url('../../static/img/sticker_origin.jpg');
+                    "
+                    class="dis4"
+                  >
+                    huniprinting
+                  </div>
+                </a>
+              </div>
+            </div>
+            <p class="tes">Others</p>
           </div>
         </div>
       </div>
@@ -383,31 +628,41 @@
             </h1>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/syj.png') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/khj.png') }}"
+            />
             <p>Hanju Kim</p>
             <p>E-mail : hanjukim0922@gmail.com</p>
             <p>KakaoTalk : hj0922</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/kmj.png') }}"
+            />
             <p>Minji Kim</p>
             <p>E-mail : vp9397@naver.com</p>
             <p>KakaoTalk : woodbvo12</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/syj.png') }}"
+            />
             <p>Yeonjae Sung</p>
             <p>E-mail : siriyay@naver.com</p>
             <p>KakaoTalk : proofreadd</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/sjh.png') }}"
+            />
             <p>Jongho Song</p>
             <p>E-mail : sjh7397@naver.com</p>
             <p>KakaoTalk : Lilac3</p>
           </div>
           <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <img
+              src="{{ url_for('static', filename = 'img/contact/jyh.png') }}"
+            />
             <p>JeongYeong Hoon</p>
             <p>E-mail : gi93008@naver.com</p>
             <p>KakaoTalk : gannak8</p>
@@ -434,9 +689,13 @@
               <span>림펫 LIMNPET</span>
               |
               <span>
-                <em>출처</em>
-                <a href="image_src.html" style="text-decoration: none">
-                  사용 이미지 출처</a
+                <em>source</em>
+                <a
+                  href="/img_src"
+                  target="_blank"
+                  style="text-decoration: none; color: white"
+                >
+                  Image source used</a
                 >
               </span>
               |
@@ -460,6 +719,22 @@
         </div>
       </div>
     </div>
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    >
+      let test = document.getElementById("example");
+
+      test.addEventListener("mouseover", function (event) {
+      //highlight the mouseover target
+      event.target.style.color = "red";
+      }, false);
+
+      test.addEventListener("mouseout", function (event) {
+      // highlight the mouseout target
+      event.target.style.color = "black";
+      }, false);
+    </script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
