--- a/templates/result.html
+++ b/templates/result.html
@@ -107,7 +107,7 @@
     <div class="list">
       <div class="three">
         <div style="text-align: center" id="div_show">
-          <h1 style="text-align: center">LimnPet</h1>
+          <h1 style="text-align: center">LimnPet Service</h1>
           <h3 style="text-align: center">
             Draw your pet in the style of your choice
           </h3>
@@ -123,7 +123,7 @@
           <div id="result_show">
             <img
               src="{{url_for('static', filename = img_file)}}"
-              style="width: 10rem"
+              style="width: 20rem"
               alt="Error"
             />
           </div>
