--- a/templates/result_ko.html
+++ b/templates/result_ko.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -107,17 +107,23 @@
     <div class="list">
       <div class="three">
         <div style="text-align: center" id="div_show">
-          <h1 style="text-align: center">LimnPet</h1>
+          <h1 style="text-align: center">LimnPet 서비스</h1>
           <h3 style="text-align: center">
-            Draw your pet in the style of your choice
+            원하는대로 스타일을 선택하고 그려보세요
           </h3>
+          <p style="padding-top:1rem;text-align: center">
+            결과를 저장하세요<br>
+            해상도를 개선하시려면 서비스 페이지로 돌아가세요<br>
+            또는<br>
+            굿즈 페이지로 이동해 굿즈 샵을 선택하세요!
+          </p>
         </div>
 
         <div class="file-upload">
           <div id="result_show">
             <img
               src="{{url_for('static', filename = img_file)}}"
-              style="width: 10rem"
+              style="width: 20rem"
               alt="Error"
             />
           </div>
@@ -125,7 +131,7 @@
           <div id="download_button">
             <a href="{{url_for('static', filename = img_file)}}" download>
               <button class="remove-image">
-                <span class="image-title">저장하기</span>
+                <span class="image-title">저장</span>
               </button>
             </a>
           </div>
@@ -136,7 +142,18 @@
               type="button"
               onClick="location.href='/service_ko'"
             >
-              <span class="image-title">다시하기</span>
+              <span class="image-title">다시 하기</span>
+            </button>
+          </div>
+
+          <div id="goods_button">
+            <button
+              class="remove-image"
+              style="font-size:medium"
+              type="button"
+              onClick="location.href='/goods_ko'"
+            >
+              <span class="image-title">굿즈샵 목록으로 이동</span>
             </button>
           </div>
           
@@ -146,7 +163,7 @@
               type="button"
               onClick="location.href='/home_ko'"
             >
-              <span class="image-title">홈으로돌아가기</span>
+              <span class="image-title">홈으로 이동</span>
             </button>
           </div>
 
